syntax = "proto3";

package authServerClient;
import "protobuf-response.proto";
import "jwt-response.proto";
import "google/protobuf/wrappers.proto";

option java_package = "org.dbs.protobuf.auth";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message PlayerLoginRequest {
  string playerLogin = 1;
  string playerPassword = 2;
}

message RefreshPlayerJwtRequest {
  org.dbs.protobuf.core.Jwts jwts = 1;
}
